# mcp-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_EN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  app_state.rs  error.rs  lib.rs  main.rs  migration.rs  tool_detection.rs
src-tauri/src/commands/: agents.rs  app.rs  mcp.rs  mod.rs  skills.rs  tool_detection.rs  tool_manager.rs  update.rs
src-tauri/src/core/: central_repo.rs  featured_skills.rs  git_fetcher.rs  github_download.rs  installer.rs  mod.rs  skills_search.rs  sync_engine.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/dao/: mcp.rs  mod.rs  skill.rs
src-tauri/src/import/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/services/: mcp_service.rs  mod.rs  sync.rs  tool_manager.rs
src-tauri/src/skill_core/: mod.rs
src-tauri/src/skill_core/tool_adapters/: mod.rs
src/components/mcp/: McpFormModal.tsx  NewAgentModal.tsx  UnifiedMcpPanel.tsx
src/components/skills/: SkillsList.tsx  SkillsPanel.tsx
src/components/skills/modals/: AddSkillModal.tsx  BatchSyncModal.tsx  GitPickModal.tsx
src/components/tool-manager/: ToolManagerPanel.tsx
src/contexts/: InstalledToolsContext.tsx
src/hooks/: useAppVersion.ts  useMcp.ts
src/lib/: tools.ts
src/lib/api/: index.ts
src/types/: index.ts
