[package]
name = "mcp-manager"
version = "1.0.0"
description = "Universal MCP Server Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "mcp_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
indexmap = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
dirs = "6"
once_cell = "1"
parking_lot = "0.12"
