[package]
name = "ai-tool-manager"
version = "1.0.0"
description = "Universal MCP Server Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_tool_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
indexmap = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
dirs = "6"
once_cell = "1"
parking_lot = "0.12"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
anyhow = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
junction = "0.2"
